k8s/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-user
  namespace: service
spec:
  selector:
    matchLabels:
      for: user
  # remove replica if using gitops
  replicas: 1
  template:
    metadata:
      labels:
        type: service
        for: user
    spec:
      containers:
        - name: user
          # image: { imageURI }
          image: nginx
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 256Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-product
  namespace: service
spec:
  selector:
    matchLabels:
      for: product
  # remove replica if using gitops
  replicas: 1
  template:
    metadata:
      labels:
        type: service
        for: product
    spec:
      containers:
        - name: product
          image:
          # image: { imageURI }
          image: nginx
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 256Mi
