k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  namespace: service
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: {acmArn}
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: api.hachwimu.com
      http:
        paths:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: service-user
                port:
                  number: 80
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: service-product
                port:
                  number: 80
